--- a/index.html
+++ b/index.html
@@ -1,55 +1,77 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
-    <title>Company Name</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gesta Asesoria</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 
 <body>
     <header class="header">
-        <img src="company-logo.png" alt="Company Name" width="30em">
+        <img src="company-logo.png" alt="Company Name">
     </header>
     <nav class="nav">
-        <a href="#">Asesoria y Consultoria Deportiva</a>
-        <a href="#">Gestion Deportiva</a>
-        <a href="#">Informes y Auditorias</a>
-        <a href="#">Mantenimiento de Infraestructura</a>
-        <a href="#">Marketing</a>
-        <a href="#">Instalaciones Deportiva</a>
-        <a href="#">Asesoria Juridica Legal</a>
-        <a href="#">Capacitaciones</a>
-        <a href="#">Busqueda y Formacion Laboral</a>
+        <div><a href="#" style="padding-left:2em;">Asesoria y Consultoria Deportiva</a></div>
+        <div><a href="#">Gestion Deportiva</a></div>
+        <div><a href="#">Informes y Auditorias</a></div>
+        <div><a href="#">Mantenimiento de Infraestructura</a></div>
+        <div><a href="#">Marketing</a></div>
+        <div><a href="#">Instalaciones Deportiva</a></div>
+        <div><a href="#">Asesoria Juridica Legal</a></div>
+        <div><a href="#">Capacitaciones</a></div>
+        <div><a href="#" style="padding-right:2em">Busqueda y Formacion Laboral</a></div>
     </nav>
     <div class="landing">
-        <img src="company-logo.png" alt="photos" width="30em">
+        <img src="company-logo.png" alt="photos">
     </div>
     <div class="descripcion">
-        <h2>Avento consultoría deportiva</h1>
+        <ul class="panel">
+            <li class="column" style="margin-bottom: 3em; margin-top: 0em;">
+                <h2>Avento consultoría deportiva</h2>
+                <div class="empty-box"></div>
+                <p>
+                    En Avento creemos que la estrategia, la igualdad y la innovación son fundamentales para el
+                    desarrollo
+                    del deporte. Sobre estos ejes, nos implicamos en cada proyecto que iniciamos aportando todo nuestro
+                    conocimiento y profesionalidad como consultoría deportiva. Nuestro carácter y pasión por el deporte
+                    se
+                    reflejan en la aspiración de contribuir con cada proyecto a la mejora del ámbito deportivo.
+                </p>
+            </li>
+            <li class="column">
+                <img src="company-logo.png" alt="photos">
+            </li>
+
             <h1>Estrategia, igualdad e innovación</h1>
-            <div class="empty-box"></div>
-            <p>
-                En Avento creemos que la estrategia, la igualdad y la innovación son fundamentales para el desarrollo
-                del deporte. Sobre estos ejes, nos implicamos en cada proyecto que iniciamos aportando todo nuestro
-                conocimiento y profesionalidad como consultoría deportiva. Nuestro carácter y pasión por el deporte se
-                reflejan en la aspiración de contribuir con cada proyecto a la mejora del ámbito deportivo.
-            </p>
+
+        </ul>
     </div>
     <ul class="ul">
         <li>
             <h4>Casos de exito</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, aperiam ad, impedit possimus autem animi laborum iure temporibus quidem dolorem numquam atque commodi officiis eius vitae. Aperiam illum cum beatae!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, aperiam ad, impedit possimus autem
+                animi laborum iure temporibus quidem dolorem numquam atque commodi officiis eius vitae. Aperiam illum
+                cum beatae!</p>
             <button>+</button>
         </li>
         <li>
             <h4>Estrategia para el deporte</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, aperiam ad, impedit possimus autem animi laborum iure temporibus quidem dolorem numquam atque commodi officiis eius vitae. Aperiam illum cum beatae!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, aperiam ad, impedit possimus autem
+                animi laborum iure temporibus quidem dolorem numquam atque commodi officiis eius vitae. Aperiam illum
+                cum beatae!</p>
             <button>+</button>
         </li>
         <li>
             <h4>Igualdad en el deporte</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, aperiam ad, impedit possimus autem animi laborum iure temporibus quidem dolorem numquam atque commodi officiis eius vitae. Aperiam illum cum beatae!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, aperiam ad, impedit possimus autem
+                animi laborum iure temporibus quidem dolorem numquam atque commodi officiis eius vitae. Aperiam illum
+                cum beatae!</p>
             <button>+</button>
         </li>
     </ul>
@@ -59,7 +81,9 @@
                 <img src="company-logo.png" alt="photos" width="30em">
             </li>
             <li class="footer-li-text">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, aperiam ad, impedit possimus autem animi laborum iure temporibus quidem dolorem numquam atque commodi officiis eius vitae. Aperiam illum cum beatae!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, aperiam ad, impedit possimus autem
+                    animi laborum iure temporibus quidem dolorem numquam atque commodi officiis eius vitae. Aperiam
+                    illum cum beatae!</p>
             </li>
         </ul>
     </footer>
