--- a/Consultoría y Gestión.html
+++ b/Consultoría y Gestión.html
@@ -23,11 +23,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Inicio</a>
-                </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./Consultoría y Gestión.html">Consultoría y Gestión</a>
+                    <a class="nav-link" href="./index.html">Inicio</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Consultoría y Gestión</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./Mantenimiento e Infraestructura Deportiva.html">Mantenimiento e Infraestructura Deportiva</a>
@@ -47,22 +47,29 @@
     <div class="descripcion">
         <ul class="panel">
             <li class="column column-1" style="margin-top: 0em; max-width: 70%; padding-right: 0em;">
-                <h2>Inicio</h2>
+                <h2>Consultoría y Gestión</h2>
                 <div class="empty-box"></div>
                 <p>
-                    Gesta Consultora Deportiva
-                    Somos una empresa que nace en la necesidad que tienen muchas Instituciones Deportivas para mejorar
-                    sus procesos y administraciones.
+                    Ayudamos a los clientes a identificar, planificar e implementar estrategias para alcanzar los objetivos de la organización. 
+
+                </p>
+                <ul style="list-style:disc; text-align: start; margin-bottom: 0.7em;">
+                    <li>Auditoría y evaluación de la situación</li>
+                    <li>Planes de Negocios</li>
+                    <li>Planificación Estratégica</li>
+                    <li>Toma de decisiones</li>
+                    <li>Búsqueda de Financiación y Gestión de las Inversiones</li>
+                </ul>
+                <p>
+                    Nos especializamos en la atención de consultas específicas y recomendaciones según las necesidades identificadas con un conjunto de servicios de consultoría en dirección y gestión, Asesoramos a dirigentes y empleados en la toma de decisiones permitiéndoles identificar y planificar las estrategias o acciones.
 
                 </p>
                 <p>
-                    Conformado por un grupo de profesionales con una amplia experiencia en la Gestión de Instituciones
-                    con más de 25 años de trayectoria en el Mercado dispuestos a trabajar y llevar adelante todas las
-                    acciones necesarias para lograr los objetivos de cada Institución.
+                    Obtener una visión ampliada permite identificar y planificar estrategias óptimas, así como planes de negocio en el sector de instalaciones deportivas con expertos en el sector.
                 </p>
             </li>
             <li class="column column-2" style="max-width: 50%; margin: auto;">
-                <img src="/images/others/TipitosDeporte - cortado.png" alt="photos"
+                <img src="/images/others/TipitosLegales - cortado.png" alt="photos"
                     style="max-width: 100%; background-color: rgb(68, 68, 68); border-radius: 2em; padding: 2em; padding-bottom: 0em;">
             </li>
         </ul>
