--- a/Marketing.html
+++ b/Marketing.html
@@ -23,8 +23,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Inicio</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="./index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./Consultoría y Gestión.html">Consultoría y Gestión</a>
@@ -35,8 +35,8 @@
                 <li class="nav-item">
                     <a class="nav-link" href="./Recursos Humanos.html">Recursos Humanos</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./Marketing.html">Marketing</a>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Marketing</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./Nos Acompañan.html">Nos Acompañan</a>
@@ -47,22 +47,24 @@
     <div class="descripcion">
         <ul class="panel">
             <li class="column column-1" style="margin-top: 0em; max-width: 70%; padding-right: 0em;">
-                <h2>Inicio</h2>
+                <h2>Marketing</h2>
                 <div class="empty-box"></div>
                 <p>
-                    Gesta Consultora Deportiva
-                    Somos una empresa que nace en la necesidad que tienen muchas Instituciones Deportivas para mejorar
-                    sus procesos y administraciones.
+                    El marketing y la comunicación son piezas claves para afrontar los retos y acercar las oportunidades en el ámbito del deporte y las instalaciones deportivas.
+
 
                 </p>
                 <p>
-                    Conformado por un grupo de profesionales con una amplia experiencia en la Gestión de Instituciones
-                    con más de 25 años de trayectoria en el Mercado dispuestos a trabajar y llevar adelante todas las
-                    acciones necesarias para lograr los objetivos de cada Institución.
+                    Disponemos de un conjunto de soluciones que ayudarán al crecimiento de las entidades deportivas, consolidación de la identidad corporativa e institucional, promoción de los procesos participativos y resultados de la planificación, programas y proyectos adecuados para cada Institución.
+                </p>
+                <h2 style="margin-top:1em ;">Transformación Digital</h2>
+                <div class="empty-box"></div>
+                <p>
+                    Proponemos la dirección y tutorización en la transición digital para facilitar el cambio de cultura, implementación y evaluación de los objetivos previstos de cada institución,  Ponemos en marcha la transformación digital con Metodologías ágiles para introducir los  cambios  que mejoren la competitividad del servicio.
                 </p>
             </li>
             <li class="column column-2" style="max-width: 50%; margin: auto;">
-                <img src="/images/others/TipitosDeporte - cortado.png" alt="photos"
+                <img src="/images/others/TipitosLegales - cortado.png" alt="photos"
                     style="max-width: 100%; background-color: rgb(68, 68, 68); border-radius: 2em; padding: 2em; padding-bottom: 0em;">
             </li>
         </ul>
