--- a/Nos Acompañan.html
+++ b/Nos Acompañan.html
@@ -23,8 +23,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Inicio</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="./index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./Consultoría y Gestión.html">Consultoría y Gestión</a>
@@ -38,8 +38,8 @@
                 <li class="nav-item">
                     <a class="nav-link" href="./Marketing.html">Marketing</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./Nos Acompañan.html">Nos Acompañan</a>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Nos Acompañan</a>
                 </li>
             </ul>
         </div>
@@ -47,13 +47,10 @@
     <div class="descripcion">
         <ul class="panel">
             <li class="column column-1" style="margin-top: 0em; max-width: 70%; padding-right: 0em;">
-                <h2>Inicio</h2>
+                <h2>Nos Acompañan</h2>
                 <div class="empty-box"></div>
                 <p>
-                    Gesta Consultora Deportiva
-                    Somos una empresa que nace en la necesidad que tienen muchas Instituciones Deportivas para mejorar
-                    sus procesos y administraciones.
-
+                    Estas empresas tienen un compromiso muy especial ayudando a que cada día el deporte crezca en calidad y servicio.
                 </p>
                 <p>
                     Conformado por un grupo de profesionales con una amplia experiencia en la Gestión de Instituciones
@@ -62,8 +59,8 @@
                 </p>
             </li>
             <li class="column column-2" style="max-width: 50%; margin: auto;">
-                <img src="/images/others/TipitosDeporte - cortado.png" alt="photos"
-                    style="max-width: 100%; background-color: rgb(68, 68, 68); border-radius: 2em; padding: 2em; padding-bottom: 0em;">
+                <img src="/images/others/marcas.png" alt="photos"
+                    style="max-width: 100%; background-color: rgb(154, 154, 154); border-radius: 2em; padding: 2em; padding-bottom: 0em;padding-top: 6em;">
             </li>
         </ul>
     </div>
