--- a/Recursos Humanos.html
+++ b/Recursos Humanos.html
@@ -23,17 +23,18 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Inicio</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="./index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./Consultoría y Gestión.html">Consultoría y Gestión</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./Mantenimiento e Infraestructura Deportiva.html">Mantenimiento e Infraestructura Deportiva</a>
+                    <a class="nav-link" href="./Mantenimiento e Infraestructura Deportiva.html">Mantenimiento e
+                        Infraestructura Deportiva</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./Recursos Humanos.html">Recursos Humanos</a>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Recursos Humanos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./Marketing.html">Marketing</a>
@@ -47,22 +48,24 @@
     <div class="descripcion">
         <ul class="panel">
             <li class="column column-1" style="margin-top: 0em; max-width: 70%; padding-right: 0em;">
-                <h2>Inicio</h2>
+                <h2>Recursos Humanos</h2>
                 <div class="empty-box"></div>
                 <p>
-                    Gesta Consultora Deportiva
-                    Somos una empresa que nace en la necesidad que tienen muchas Instituciones Deportivas para mejorar
-                    sus procesos y administraciones.
-
+                    Como creemos que para el éxito de una organización es prioritario contar con los Recursos Humanos
+                    adecuados, Es fundamental lograr el compromiso y la satisfacían de cada integrante de la
+                    Organización.
+                    En Gesta ponemos estas herramientas a tu disposición:
                 </p>
-                <p>
-                    Conformado por un grupo de profesionales con una amplia experiencia en la Gestión de Instituciones
-                    con más de 25 años de trayectoria en el Mercado dispuestos a trabajar y llevar adelante todas las
-                    acciones necesarias para lograr los objetivos de cada Institución.
-                </p>
+                <ul style="list-style:disc; text-align: start; margin-bottom: 0.7em;">
+                    <li>Selección del personal</li>
+                    <li>Formación interna continua</li>
+                    <li>Motivación del personal </li>
+                    <li>Sistemas de evaluación y Planes de incentivos</li>
+                    <li>Optimización del diseño de la organización</li>
+                </ul>                
             </li>
             <li class="column column-2" style="max-width: 50%; margin: auto;">
-                <img src="/images/others/TipitosDeporte - cortado.png" alt="photos"
+                <img src="/images/others/TipitosLegales - cortado.png" alt="photos"
                     style="max-width: 100%; background-color: rgb(68, 68, 68); border-radius: 2em; padding: 2em; padding-bottom: 0em;">
             </li>
         </ul>
@@ -70,7 +73,7 @@
     <footer class="footer">
         <ul class="container">
             <li class="logo">
-                <img src="/images/footer-logos/logoaltacalidad.png" alt="Logo de la compañía" >
+                <img src="/images/footer-logos/logoaltacalidad.png" alt="Logo de la compañía">
             </li>
             <li class="social-buttons">
                 <ul class="social-buttons-ul">
