--- a/Mantenimiento e Infraestructura Deportiva.html
+++ b/Mantenimiento e Infraestructura Deportiva.html
@@ -23,14 +23,14 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Inicio</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="./index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./Consultoría y Gestión.html">Consultoría y Gestión</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./Mantenimiento e Infraestructura Deportiva.html">Mantenimiento e Infraestructura Deportiva</a>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Mantenimiento e Infraestructura Deportiva</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./Recursos Humanos.html">Recursos Humanos</a>
@@ -47,18 +47,14 @@
     <div class="descripcion">
         <ul class="panel">
             <li class="column column-1" style="margin-top: 0em; max-width: 70%; padding-right: 0em;">
-                <h2>Inicio</h2>
+                <h2>Mantenimiento e Infraestructura
+                    Deportiva
+                </h2>
                 <div class="empty-box"></div>
                 <p>
-                    Gesta Consultora Deportiva
-                    Somos una empresa que nace en la necesidad que tienen muchas Instituciones Deportivas para mejorar
-                    sus procesos y administraciones.
-
-                </p>
-                <p>
-                    Conformado por un grupo de profesionales con una amplia experiencia en la Gestión de Instituciones
-                    con más de 25 años de trayectoria en el Mercado dispuestos a trabajar y llevar adelante todas las
-                    acciones necesarias para lograr los objetivos de cada Institución.
+                    Ponemos toda nuestro expertiz en la realización de proyectos en construcciones o readecuaciones de
+                    áreas deportivas, aportando la experiencia y conocimiento en el diseño, planificación y ejecución de
+                    obras que tu club o entidad deportiva necesite.
                 </p>
             </li>
             <li class="column column-2" style="max-width: 50%; margin: auto;">
@@ -70,7 +66,7 @@
     <footer class="footer">
         <ul class="container">
             <li class="logo">
-                <img src="/images/footer-logos/logoaltacalidad.png" alt="Logo de la compañía" >
+                <img src="/images/footer-logos/logoaltacalidad.png" alt="Logo de la compañía">
             </li>
             <li class="social-buttons">
                 <ul class="social-buttons-ul">
