Cambios del tipo

--- a/Consultoría y Gestión.html
+++ b/Consultoría y Gestión.html
@@ -14,7 +14,7 @@
 
 <body>
     <header class="header">
-        <img src="/images/logo/logo ccon letras grande.png" alt="Company Name">
+        <img src="/images/others/Imagen1.jpg" alt="Company Name">
     </header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: rgb(231, 231, 231) !important;">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -69,15 +69,15 @@
                 </p>
             </li>
             <li class="column column-2" style="max-width: 50%; margin: auto;">
-                <img src="/images/others/TipitosLegales - cortado.png" alt="photos"
-                    style="max-width: 100%; background-color: rgb(68, 68, 68); border-radius: 2em; padding: 2em; padding-bottom: 0em;">
+                <img src="/images/others/LogoDer.png" alt="photos"
+                    style="max-width: 100%;  padding: 2em;">
             </li>
         </ul>
     </div>
     <footer class="footer">
         <ul class="container">
             <li class="logo">
-                <img src="/images/footer-logos/logoaltacalidad.png" alt="Logo de la compañía" >
+                <img src="/images/others/LogoBlanco.png" alt="Logo de la compañía" >
             </li>
             <li class="social-buttons">
                 <ul class="social-buttons-ul">
