--- a/Nos Acompañan.html
+++ b/Nos Acompañan.html
@@ -14,7 +14,7 @@
 
 <body>
     <header class="header">
-        <img src="/images/logo/logo ccon letras grande.png" alt="Company Name">
+        <img src="/images/others/Imagen1.jpg" alt="Company Name">
     </header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: rgb(231, 231, 231) !important;">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -67,7 +67,7 @@
     <footer class="footer">
         <ul class="container">
             <li class="logo">
-                <img src="/images/footer-logos/logoaltacalidad.png" alt="Logo de la compañía" >
+                <img src="/images/others/LogoBlanco.png" alt="Logo de la compañía" >
             </li>
             <li class="social-buttons">
                 <ul class="social-buttons-ul">
