--- a/Recursos Humanos.html
+++ b/Recursos Humanos.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gesta Asesoria</title>
+    <link rel="icon" href="/images/others/logoinicial.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
@@ -14,7 +15,7 @@
 
 <body>
     <header class="header">
-        <img src="/images/others/Imagen1.jpg" alt="Company Name">
+        <img src="/images/others/title.png" alt="Company Name">
     </header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: rgb(231, 231, 231) !important;">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
