--- a/Mantenimiento e Infraestructura Deportiva.html
+++ b/Mantenimiento e Infraestructura Deportiva.html
@@ -53,14 +53,13 @@
                 </h2>
                 <div class="empty-box"></div>
                 <p>
-                    Ponemos toda nuestro expertiz en la realización de proyectos en construcciones o readecuaciones de
+                    Ponemos toda nuestra práctica en la realización de proyectos en construcciones o readecuaciones de
                     áreas deportivas, aportando la experiencia y conocimiento en el diseño, planificación y ejecución de
                     obras que tu club o entidad deportiva necesite.
                 </p>
             </li>
             <li class="column column-2" style="max-width: 50%; margin: auto;">
-                <img src="/images/others/LogoDer.png" alt="photos"
-                    style="max-width: 100%;  padding: 2em;">
+                <img src="/images/others/LogoDer.png" alt="photos" style="max-width: 100%;  padding: 2em;">
             </li>
         </ul>
     </div>
