--- a/Recursos Humanos.html
+++ b/Recursos Humanos.html
@@ -53,21 +53,19 @@
                 <div class="empty-box"></div>
                 <p>
                     Como creemos que para el éxito de una organización es prioritario contar con los Recursos Humanos
-                    adecuados, Es fundamental lograr el compromiso y la satisfacían de cada integrante de la
-                    Organización.
-                    En Gesta ponemos estas herramientas a tu disposición:
+                    adecuados, es fundamental lograr el compromiso y la satisfacción de cada integrante de la
+                    Organización. En Gesta ponemos estas herramientas a tu disposición:
                 </p>
                 <ul style="list-style:disc; text-align: start; margin-bottom: 0.7em;">
                     <li>Selección del personal</li>
                     <li>Formación interna continua</li>
-                    <li>Motivación del personal </li>
+                    <li>Motivación del personal</li>
                     <li>Sistemas de evaluación y Planes de incentivos</li>
                     <li>Optimización del diseño de la organización</li>
-                </ul>                
+                </ul>
             </li>
             <li class="column column-2" style="max-width: 50%; margin: auto;">
-                <img src="/images/others/LogoDer.png" alt="photos"
-                    style="max-width: 100%;  padding: 2em;">
+                <img src="/images/others/LogoDer.png" alt="photos" style="max-width: 100%;  padding: 2em;">
             </li>
         </ul>
     </div>
