--- a/Nos Acompañan.html
+++ b/Nos Acompañan.html
@@ -60,8 +60,8 @@
                 </p>
             </li>
             <li class="column column-2" style="max-width: 50%; margin: auto;">
-                <img src="/images/others/marcas.png" alt="photos"
-                    style="max-width: 100%; background-color: rgb(154, 154, 154); border-radius: 2em; padding: 2em; padding-bottom: 0em;padding-top: 6em;">
+                <!-- <img src="/images/others/marcas.png" alt="photos"
+                    style="max-width: 100%; background-color: rgb(154, 154, 154); border-radius: 2em; padding: 2em; padding-bottom: 0em;padding-top: 6em;"> -->
             </li>
         </ul>
     </div>
